k8s/deployment.yaml

# c1ux-order-entry Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: c1ux-order-entry-api
  namespace: c1ux
spec:
  replicas: 1
  selector:
    matchLabels:
      app: c1ux-order-entry-api
  template:
    metadata:
      labels:
        app: c1ux-order-entry-api
    spec:
      containers:
      - name: c1ux-order-entry-api
        image: 893686724547.dkr.ecr.us-east-1.amazonaws.com/c1ux/c1ux-order-entry:#{IMAGE_TAG}#
        imagePullPolicy: "IfNotPresent"
        resources:
          requests:
            memory: "2048M"
            cpu: "250m"
          limits:
            memory: "3072M"
            cpu: "500m"
        ports:
        - containerPort: 80
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: efs-volume-1
          mountPath: /data-efs
      volumes:
      - name: efs-volume-1
        persistentVolumeClaim:
          claimName: efs-claim

# c1ux-order-entry Service
---
apiVersion: v1
kind: Service
metadata:
  name: c1ux-order-entry-api
  namespace: c1ux
spec:
  selector:
    app: c1ux-order-entry-api
  ports:
  - port: 80
    targetPort: 80
---

# c1ux-order-entry Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c1ux-order-entry-api
  namespace: c1ux
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: c1ux-order-entry-api
            port: 
              number: 80
